...
                          ]),
                          SizedBox(height: screenHeight * 0.06),
                          Row(
                              mainAxisAlignment: MainAxisAlignment.center,
                              children: [
                                Container(
                                    key: const Key("clickButtom"),
                                    height: screenHeight * 0.07,
                                    width: screenWidth * 0.85,
                                    child: MaterialButton(
                                        color: Colors.redAccent,
                                        onPressed: () async {
                                          if (await NetworkCheck().check()) {
...
                                                        "arturo.italia@virgilio.it",
                                                    password: "arturo22",
                                                    context: context);
                                            /*User? user =
                                                await loginUsingEmailPassword(
                                                    email:
                                                        'marinvargasf@gmail.com',
                                                    password: 'vargas22',
                                                    context: context);*/
                                            if (user != null) {
                                              await widget.loginService
                                                  .firebasefirestore()
                                                  .collection('users')
...
